# InsideWindowsDebugging

./: .gitignore
code/: CMakeLists.txt  InsideWindowsDebugging.sln
code/chapter_01/: CMakeLists.txt
code/chapter_01/WorkerProcess/: CMakeLists.txt
code/chapter_02/HelloWorld/: CMakeLists.txt
code/chapter_03/: CMakeLists.txt
code/chapter_03/BasicException/: CMakeLists.txt
code/chapter_03/HelloWorld/: Ch03_HelloWorld.csproj
code/chapter_04/: CMakeLists.txt
code/chapter_04/LoadException/: LoadException.csproj
code/chapter_04/ManagedException/: ManagedException.csproj
code/chapter_04/NullDereference/: CMakeLists.txt
code/chapter_04/ServiceCrash/: CMakeLists.txt
code/chapter_05/: CMakeLists.txt
code/chapter_05/CrtCleanup/: CMakeLists.txt  main.cpp
code/chapter_05/HelloWorld/: Ch05_HelloWorld.csproj
code/chapter_05/StlSample/: CMakeLists.txt
code/chapter_06/: CMakeLists.txt
code/chapter_06/BadHandle/: CMakeLists.txt
code/chapter_06/BufferOverrun/: CMakeLists.txt
code/chapter_06/DoubleFree/: CMakeLists.txt
code/chapter_06/FormatString/: CMakeLists.txt
code/chapter_07/: CMakeLists.txt
code/chapter_07/BreakOnDllLoad/: CMakeLists.txt
code/chapter_07/BreakOnDllLoadVs/: CMakeLists.txt
code/chapter_07/BreakOnFailure/: CMakeLists.txt
code/chapter_07/MsiCustomAction/: CMakeLists.txt
code/chapter_08/: CMakeLists.txt
code/chapter_08/HandleLeak/: HandleLeak.csproj
code/chapter_09/: CMakeLists.txt
code/chapter_10/: CMakeLists.txt
code/chapter_12/: CMakeLists.txt
code/chapter_13/: CMakeLists.txt
code/tools/: CMakeLists.txt
(+46 files in other folders)
